# socratic

./: .MANUAL.md.swp  .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  MANUAL.md  README.md  claude_code_题库.csv  gen_grade8.py  hermes_题库.csv  linux_题库.csv  pyproject.toml  生物地理题库_v3.csv
data/cache/: biology.json  chinese.json  claude.json  cmd.json  english.json  geography.json  hermes.json  math.json  physics.json
data/kb/math_bsd/: kb_8_supplement_md.txt  北师版初中数学教材_md.txt
docs/: workflow-guide.md
docs/agents/: domain.md  triage-labels.md
socratic/: __init__.py  __main__.py  adaptive.py  book.py  cache.py  cli.py  flash.py  generate.py  import_csv.py  kb.py  knowledge.py  path.py  persona.py  problems.py  progress.py  quiz.py  report.py  review.py  solve.py  utils.py  wiki_math.py
tests/: test_cache_wiki_integration.py  test_wiki_math.py
