[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "socratic"
version = "1.2.0"
description = "苏格拉底互动学习 — CLI 交互式多学科练习工具"
authors = [{name = "Hermes Agent"}]
license = {text = "MIT"}
requires-python = ">=3.10"

[project.scripts]
socratic = "socratic.cli:main"

[tool.setuptools.packages.find]
include = ["socratic*"]
